--- a/src/assets/sass/style.sass
+++ b/src/assets/sass/style.sass
@@ -1,2 +1,30 @@
 html, body
   margin: 0
+  font-family: "Segoe UI", serif
+
+section
+  padding: 0.5rem
+  border: 1px solid #cccccc
+  border-radius: 3px
+
+.container
+  max-width: 978px
+  padding: 1rem
+  margin: auto
+
+.paste__container
+  margin: 1rem 0
+
+.paste__content
+  margin: 0
+  overflow: auto
+
+#paste
+  resize: none
+  width: 100%
+  height: 400px
+  padding: 0
+  border: none
+  outline: none
+  background: transparent
+  font-family: monospace
